Fix a random spacing issue that just now started appearing whaaaaaa?

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -90,7 +90,7 @@ body#index_root
     min-width: 317px
     display: block
     float: left
-    margin: 6px 2px 12px 2px
+    margin: 6px 0 12px 2px
     h4
       margin: 4px 0 4px 0
 
